--- a/public/app/features/alerting/partials/notification_edit.html
+++ b/public/app/features/alerting/partials/notification_edit.html
@@ -64,6 +64,13 @@
         <input type="text" required class="gf-form-input max-width-30" ng-model="ctrl.model.settings.url" placeholder="Slack incoming webhook url"></input>
       </div>
       <div class="gf-form max-width-30">
+        <span class="gf-form-label width-6">Proxy</span>
+        <input type="text"
+          class="gf-form-input max-width-30"
+          ng-model="ctrl.model.settings.proxy">
+        </input>
+      </div>
+      <div class="gf-form max-width-30">
         <span class="gf-form-label width-6">Recipient</span>
         <input type="text"
           class="gf-form-input max-width-30"
